# extended-containers

./: .gitignore  CHANGELOG.md  pyproject.toml  ruff.toml
src/extended_containers/: alias_dict.py  default_dict.py  nested_dict.py  reversible_map.py  typed_list.py
tests/nested_dict/: test_nested_dict.py
