[tool.poetry]
name = "extended-containers"
version = "0.1.0"
description = "Containers and Classes with extended functionality"
authors = ["Eric Copeland <escopeland@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.2"

[tool.pylint."MESSAGES CONTROL"]
disable="missing-function-docstring, missing-class-docstring"

[tool.mypy]
plugins = ["pydantic.mypy"]
enable_incomplete_feature = ["NewGenericSyntax"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "src"

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
